all_manpages := libestats.3 \
                estats_agent_accessors.3 \
                estats_agent_find_var_and_group.3 \
                estats_attach.3 \
                estats_connection_accessors.3 \
                estats_connection_copy.3 \
                estats_connection_data_copy.3 \
                estats_connection_find.3 \
                estats_connection_find_v6.3 \
                estats_connection_free_local_copy.3 \
                estats_connection_from_socket.3 \
                estats_connection_head.3 \
                estats_connection_lookup.3 \
                estats_connection_new_local_copy.3 \
                estats_connection_next.3 \
                estats_delta_any.3 \
                estats_detach.3 \
                estats_get_agent_type.3 \
                estats_get_agent_version.3 \
                estats_get_connection_agent.3 \
                estats_get_connection_cid.3 \
                estats_get_connection_spec.3 \
                estats_get_group_name.3 \
                estats_get_group_nvars.3 \
                estats_get_group_size.3 \
                estats_get_log_agent.3 \
                estats_get_log_connection.3 \
                estats_get_log_group.3 \
                estats_get_log_time.3 \
                estats_get_snap_group.3 \
                estats_get_snap_group_name.3 \
                estats_get_var_name.3 \
                estats_get_var_size.3 \
                estats_get_var_type.3 \
                estats_group_accessors.3 \
                estats_group_find.3 \
                estats_group_head.3 \
                estats_group_next.3 \
                estats_log_accessors.3 \
                estats_log_close_read.3 \
                estats_log_close_write.3 \
                estats_log_open_read.3 \
                estats_log_open_write.3 \
                estats_log_write.3 \
                estats_perror.3 \
                estats_raw_read.3 \
		estats_raw_write.3 \
		estats_snap.3 \
		estats_snap_accessors.3 \
		estats_snap_data_copy.3 \
		estats_snap_from_log.3 \
		estats_snap_group.3 \
		estats_snap_read.3 \
		estats_snapshot_alloc.3 \
		estats_snapshot_alloc_from_log.3 \
		estats_snapshot_free.3 \
		estats_strerror.3 \
		estats_value_to_text.3 \
		estats_value_to_textn.3 \
		estats_var_accessors.3 \
		estats_var_find.3 \
		estats_var_head.3 \
		estats_var_next.3

man_MANS = $(all_manpages)
EXTRA_DIST = $(all_manpages)
