all_manpages := libestats.3 \
		estats_agent_attach.3 \
		estats_agent_detach.3 \
		estats_agent_find_connection_from_cid.3 \
		estats_agent_find_connection_from_socket.3 \
		estats_agent_find_connection_from_spec.3 \
		estats_agent_find_var_from_name.3 \
		estats_agent_get_connection_head.3 \
		estats_agent_get_var_head.3 \
		estats_connection_next.3 \
		estats_find_connection.3 \
                estats_find_var.3 \
		estats_var_next.3

man_MANS = $(all_manpages)
EXTRA_DIST = $(all_manpages)
